[package]
name = "patricia_trie"
version = "0.1.10"
authors = ["Takeru Ohta <phjgt308@gmail.com>", "Evan Cameron <cameron.evan@gmail.com>"]
description = "Memory-efficient data structures based on patricia tree"
homepage = "https://github.com/leshow/patricia_tree"
repository = "https://github.com/leshow/patricia_tree"
readme = "README.md"
keywords = ["patricia", "radix", "trie"]
categories = ["data-structures"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "leshow/patricia_tree" }
codecov = { repository = "leshow/patricia_tree" }

[dependencies]
smallvec = "1.4.0"

[dev-dependencies]
clap = "2"
rand = "0.7"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "insert_lines"
path = "examples/insert_lines.rs"
